<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s3" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s6" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s8" />
            
            <Button
                android:id="@+id/btn9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s9" />
            
            <Button
                android:id="@+id/btn10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s10" />
            <Button
                android:id="@+id/btn11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s11" />
            <Button
                android:id="@+id/btn12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s12" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>